* Refactor Fuse.Fusebox() and add the ACTIVE_X_OBJECT feature test. [jddalton]

* Fix a regression bug in Fuse.Class that stopped access to a class's `_super` method. [jddalton]

* Ensure Fuse.Dom.Selector.select() adapters return extended elements in IE. [jddalton]

* Ensure Array#_each returns the array it iterates over and correct overlooked native to Fuse.<native> conversions in the source. [jddalton]

* Append iframes, used when creating a Fusebox, to the HEAD instead of the HTML element. [jddalton]

* Remove nodeListSlice() and add `results` argument to prependList() allowing it to set the results initial value. [jddalton]

* Add Fuse.List.fromNodeList() and Fuse.List.fromArray() as a more granular option to Fuse.List.from(). [jddalton]

* Hook up Fuse.Dom.Selector API and cleanup/optimize more of the element traversal methods. [jddalton]
  Note: Backwards compatibility warning.
   - Add Fuse.query() method
   - Remove methods: adjacent
   - Allow ancestors, childElements, descendants, nextSiblings, previousSiblings, and siblings methods to filter by selector

* Drop Prototype selector engine and add support for NWMatcher, Sizzle, Slick, and Sly selector engines. [jddalton]
  Note: Backwards compatibility warning.

* Ensure Fuse.Util.$A converts primatives into objects when used with the `in` operator. [Justin Perkins, kangax]

* Cleanup and optimize element traversal methods. [jddalton]
  Note: Backwards compatibility warning.
   - Removed methods: immediateDescendants, getElementsBySelector, recursivelyCollect
   - Renamed method: select -> query
   - Optimized Element#sibilings() method by reducing the number of function calls it makes

* Correct nodeListSlice() handling of an undefined endIndex. [jddalton]

* Move Enumerable methods to it's prototype. [jddalton]

* Make Fuse natives inherit from Fuse object. [jddalton]

* Cleanup Fuse.Fusebox() and add support for Native generics. [jddalton]

* Move all JSON methods to json.js. [jddalton]
