@@ -1,55 +1,60 @@
   /*----------------------------- LANG: FUNCTIONS ----------------------------*/
 
   (function() {
-    this.argumentNames = function argumentNames() {
-      var names = this.toString().match(/^[\s\(]*function[^(]*\(([^)]*)\)/)[1]
+    this.argumentNames = function argumentNames(fn) {
+      var names = fn.toString().match(/^[\s\(]*function[^(]*\(([^)]*)\)/)[1]
        .replace(/\/\/.*?[\r\n]|\/\*(?:.|[\r\n])*?\*\//g, '')
         .replace(/\s+/g, '').split(',');
-      return names.length === 1 && !names[0] ? Fuse.List() : names;
+      return names.length === 1 && !names[0] ? [] : names;
     };
 
     // ECMA-5 15.3.4.5
-    this.bind = this.bind || function bind(thisArg) {
-      // simple bind
-      var args, fn = this;
-      if (arguments.length < 2 ) {
-        if (typeof thisArg === 'undefined')
-          return this;
-
+    this.bind = (function() {
+      var bind = function bind(fn, thisArg) {
+        // simple bind
+        if (arguments.length < 3 ) {
+          if (typeof thisArg === 'undefined') return fn;
+          return function() {
+            return arguments.length
+              ? fn.apply(thisArg, arguments)
+              : fn.call(thisArg);
+          };
+        }
+        // bind with curry
+        var args = slice.call(arguments, 2); reset = args.length;
         return function() {
-          return arguments.length
-            ? fn.apply(thisArg, arguments)
-            : fn.call(thisArg);
+        	args.length = reset; // reset arg length
+          return fn.apply(thisArg, arguments.length ?
+            concatList(args, arguments) : args);
+        };
+      };
+
+      if (typeof this.prototype.bind === 'function') {
+        bind = function bind(fn, thisArg) {
+          return Fuse.Function.prototype.bind.call(fn, thisArg);
         };
       }
-      // bind with curry
-      args = slice.call(arguments, 1); reset = args.length;
-      return function() {
-      	args.length = reset; // reset arg length
-        return fn.apply(thisArg, arguments.length ?
-          concatList(args, arguments) : args);
-      };
-    };
+      return bind;
+    }).call(this);
 
-    this.bindAsEventListener = function bindAsEventListener(thisArg) {
+    this.bindAsEventListener = function bindAsEventListener(fn, thisArg) {
       // simple bind
-      var args, fn = this;
-      if (arguments.length < 2 ) {
+      if (arguments.length < 3 ) {
         return function(event) {
           return fn.call(thisArg, event || getWindow(this).event);
         };
       }
       // bind with curry
-      args = slice.call(arguments, 1);
+      var args = slice.call(arguments, 2);
       return function(event) {
         return fn.apply(thisArg,
           prependList(args, event || getWindow(this).event));
       };
     };
 
-    this.curry = function curry() {
-      if (!arguments.length) return this;
-      var fn = this, args = slice.call(arguments, 0), reset = args.length;
+    this.curry = function curry(fn) {
+      if (!arguments.length) return fn;
+      var args = slice.call(arguments, 1), reset = args.length;
       return function() {
         args.length = reset; // reset arg length
         return arguments.length
@@ -58,31 +63,30 @@
       }
     };
 
-    this.delay = function delay(timeout) { 
+    this.delay = function delay(fn, timeout) { 
       timeout *= 1000;
-      var fn = this, args = slice.call(arguments, 1); 
+      var args = slice.call(arguments, 2); 
       return global.setTimeout(function() {
         return fn.apply(fn, args);
       }, timeout);
     };
 
-    this.defer = function defer() {
-      return Fuse.Function.Plugin.delay.apply(this,
-        prependList(arguments, 0.01));
+    this.defer = function defer(fn) {
+      return Fuse.Function.delay.apply(null,
+        concatList([fn, 0.01], arguments));
     };
 
-    this.methodize = function methodize() {
-      if (this._methodized) return this._methodized;
-      var fn = this;
-      return this._methodized = function() {
+    this.methodize = function methodize(fn) {
+      if (fn._methodized) return fn._methodized;
+      return fn._methodized = function() {
         return arguments.length
           ? fn.apply(null, prependList(arguments, this))
           : fn.call(null, this);
       };
     };
 
-    this.wrap = function wrap(wrapper) {
-      var fn = this, bind = Fuse.Function.Plugin.bind;
+    this.wrap = function wrap(fn, wrapper) {
+      var bind = Fuse.Function.Plugin.bind;
       return function() {
         return arguments.length
           ? wrapper.apply(this, prependList(arguments, bind.call(fn, this)))
@@ -92,13 +96,30 @@
 
     // prevent JScript bug with named function expressions
     var argumentNames =    null,
-     bind =                null,
      bindAsEventListener = null,
      curry =               null,
      delay =               null,
      defer =               null,
      methodize =           null,
      wrap =                null;
-  }).call(Fuse.Function.Plugin);
+  }).call(Fuse.Function);
 
-  Fuse.Function.updateGenerics();
+  /*--------------------------------------------------------------------------*/
+
+  (function() {
+    var name, i = 0, cache = Fuse.updateGenerics.cache,
+     names = ['argumentNames', 'bind', 'bindAdEventListener', 'curry', 'delay', 'defer', 'methodize', 'wrap'];
+    cache.Function = { };
+    while (name = names[i++]) {
+      cache.Function[name] = this[name];
+      if (this.prototype[name] !== 'function') {
+        this.prototype[name] = new Function('', [
+          'var object = Fuse.Function, slice = Array.prototype.slice;',
+          'function ' + name + '() {',
+          'return arguments.length',
+          '? object.' + name + '.apply(null, [this].concat(slice.call(arguments, 0)))',
+          ': object.' + name + '.call(null, this);',
+          '}', 'return ' + name].join('\n'))();
+      }
+    }
+  }).call(Fuse.Function);
